--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,10 +1,4 @@
-html, body {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-}
-
-#icosa {
+#icosa-viewer {
     margin: 0;
     width: 100%;
     height: 100%;
