--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -13,3 +13,37 @@
     display: block;
     position: static;
 }
+
+#loadscreen {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #1d222e;
+    z-index: 5;
+    opacity: 1;
+    transition: 1s opacity;
+}
+
+#loadscreen.fade-out {
+    opacity: 0;
+}
+
+#loadscreen.loaded {
+    z-index: -5;
+}
+
+.loadlogo {
+    width: 256px;
+    height: 256px;
+    margin: 0;
+    display: inline-block;
+    background: url('../res/img/loading-logo.png');
+    animation: load-anim 1s steps(24) infinite;
+}
+
+@keyframes load-anim {
+    100% { background-position: -6144px; }
+}
