--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -14,6 +14,38 @@
     position: static;
 }
 
+.control-panel {
+    display: block;
+    opacity: 1;
+    position: absolute;
+    right: 12px;
+    bottom: 12px;
+    border: 0;
+    z-index: 5;
+    color: white;
+}
+
+.panel-button {
+    border: 0;
+    padding: 0;
+    cursor: pointer;
+    display: block;
+    width: 24px;
+    height: 24px;
+    outline: none;
+    overflow: hidden;
+    position: relative;
+}
+
+.fullscreen-button {
+    
+    background: url('../res/img/fullscreen_white_24dp.svg');
+}
+
+.fullscreen-button.fullscreen {
+    background: url('../res/img/loading-logo.png');
+}
+
 #loadscreen {
     align-items: center;
     display: flex;
