fullscreen button working

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -38,12 +38,11 @@
 }
 
 .fullscreen-button {
-    
     background: url('../res/img/fullscreen_white_24dp.svg');
 }
 
 .fullscreen-button.fullscreen {
-    background: url('../res/img/loading-logo.png');
+    background: url('../res/img/fullscreen_exit_white_24dp.svg');
 }
 
 #loadscreen {
