--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -12,6 +12,10 @@
     height: 100%;
     display: block;
     position: static;
+    cursor: grab;
+}
+#c.grabbed {
+    cursor: grabbing;
 }
 
 .control-panel {
